fix(jade)：解决Jade的HUD宽度不足和生物遗传系统名不显示的问题。